<resources>
    <string name="app_name">Motobombas Al Dia</string>
    <string name="txtPassword">Password</string>
    <string name="txtUsuario">Usuario</string>
    <string-array name="tiposIdentificacion">
        <item>Cédula de Ciudadania</item>
        <item>Pasaporte</item>
        <item>Cedula de Extranjeria</item>
    </string-array>
    <string name="txtIdentificacion">Identificación</string>
    <string name="txtNombre">Nombres</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtDir">Direccion</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="txtEmail">Correo Electrónico</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnMapa">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>